--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <!-- FontAwesomeの読み込み -->
 
       <script src="https://kit.fontawesome.com/079e1cf9d8.js" crossorigin="anonymous"></script>
 
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
-    <title>html.演習9</title>
+    <title>html.課題10</title>
   </head>
 
   <body>
